--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>chrisprice.io</title>
 </head>
 <body>
 	<ul>
-	  <li><a href="phonegap-build">phonegap-build</a></li>  
-	  <li>dolly-zoom <a href="dolly-zoom/css3.htm">css3</a> <a href="dolly-zoom/webgl.htm">webgl</a></li>  
+	  <li><a href="http://chrisprice.github.io/phonegap-build">phonegap-build</a></li>  
+	  <li>dolly-zoom <a href="http://chrisprice.github.io/dolly-zoom/css3.htm">css3</a> <a href="http://chrisprice.github.io/dolly-zoom/webgl.htm">webgl</a></li>  
 	</ul>
 </body>
 </html>
