--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>chrisprice.io</title>
+	<title>Chris Price/title>
+	<meta name="description" content="Rants from the world of JavaScript"/>
+        <meta name="author" content="Chris Price"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 	<ul>
-	  <li><a href="http://chrisprice.github.io/phonegap-build">phonegap-build</a></li>  
-	  <li>dolly-zoom <a href="http://chrisprice.github.io/dolly-zoom/css3.htm">css3</a> <a href="http://chrisprice.github.io/dolly-zoom/webgl.htm">webgl</a></li>  
+		<li><a href="http://chrisprice.github.io/phonegap-build">phonegap-build</a></li>  
+		<li>
+	  		dolly-zoom 
+	  		<a href="http://chrisprice.github.io/dolly-zoom/css3.htm">css3</a>
+	  		<a href="http://chrisprice.github.io/dolly-zoom/webgl.htm">webgl</a>
+  		</li>
+	</ul>
+	
+	<ul>
+		<li><a href="https://twitter.com/100pxls">Twitter</a></li>
+		<li><a href="https://plus.google.com/114347034265773524402?
+   rel=author">Google+</a></li>
+		<li><a href="https://github.com/chrisprice">GitHub</a></li>
+		<li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
 	</ul>
 </body>
 </html>
