--- a/index.htm
+++ b/index.htm
@@ -23,5 +23,21 @@
 		<li><a href="https://github.com/chrisprice">GitHub</a></li>
 		<li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
 	</ul>
+	
+	<div itemscope itemtype="http://data-vocabulary.org/Person">
+  		My name is <span itemprop="name">Chris Price</span>.
+		I'm based in 
+		<span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
+			<span itemprop="locality">Newcastle</span>,
+			<span itemprop="region">England</span> 
+		</span>
+  		and work as an <span itemprop="title">engineer</span>
+		at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
+		I spend my days developing desktop/tablet/mobile web apps
+		for financial services companies. Unfortunately most of those are hidden
+		behind paywalls but I do like to 
+		<a href="http://scottlogic.com/blog/cprice" itemprop="url">blog about it</a>
+		when I can, and  contribute to a number of open source projects.
+	</div>
 </body>
 </html>
