--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chris Price/title>
+	<title>Chris Price</title>
 	<meta name="description" content="Rants from the world of JavaScript"/>
         <meta name="author" content="Chris Price"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
