--- a/index.htm
+++ b/index.htm
@@ -18,15 +18,13 @@
 	
 	<ul>
 		<li><a href="https://twitter.com/100pxls">Twitter</a></li>
-		<li><a href="https://plus.google.com/114347034265773524402?
-   rel=author">Google+</a></li>
+		<li><a href="https://plus.google.com/114347034265773524402?rel=author">Google+</a></li>
 		<li><a href="https://github.com/chrisprice">GitHub</a></li>
 		<li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
 	</ul>
 	
 	<div itemscope itemtype="http://data-vocabulary.org/Person">
-  		My name is <span itemprop="name">Chris Price</span>.
-		I'm based in 
+  		My name is <span itemprop="name">Chris Price</span>, I'm based in 
 		<span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
 			<span itemprop="locality">Newcastle</span>,
 			<span itemprop="region">England</span> 
