--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
 		for financial services companies. Unfortunately most of those are hidden
 		behind paywalls but I do like to 
 		<a href="http://scottlogic.com/blog/cprice" itemprop="url">blog about it</a>
-		when I can, and  contribute to a number of open source projects.
+		when I can.
 	</div>
 </body>
 </html>
