--- a/index.htm
+++ b/index.htm
@@ -34,8 +34,8 @@
 		I spend my days developing desktop/tablet/mobile web apps
 		for financial services companies. Unfortunately most of those are hidden
 		behind paywalls but I do like to 
-		<a href="http://scottlogic.com/blog/cprice" itemprop="url">blog about it</a>
-		when I can.
+		<a href="http://scottlogic.com/blog/cprice" itemprop="url">blog</a>
+		about it when I can.
 	</div>
 </body>
 </html>
