--- a/index.htm
+++ b/index.htm
@@ -26,8 +26,7 @@
 	<div itemscope itemtype="http://data-vocabulary.org/Person">
   		My name is <span itemprop="name">Chris Price</span>, I'm based in 
 		<span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
-			<span itemprop="locality">Newcastle</span>,
-			<span itemprop="region">England</span> 
+			<span itemprop="locality">Newcastle upon Tyne</span>
 		</span>
   		and work as an <span itemprop="title">engineer</span>
 		at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
