--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 		<span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
 			<span itemprop="locality">Newcastle upon Tyne</span>
 		</span>
-  		and work as an <span itemprop="title">engineer</span>
+  		and work as an <span itemprop="title">Software Engineer</span>
 		at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
 		I spend my days developing desktop/tablet/mobile web apps
 		for financial services companies. Unfortunately most of those are hidden
