--- a/index.htm
+++ b/index.htm
@@ -8,11 +8,12 @@
 </head>
 <body>
 	<ul>
-		<li><a href="http://chrisprice.github.io/phonegap-build">phonegap-build</a></li>  
+		<li><a href="http://chrisprice.io/gum-cube">gum-cube</a></li>  
+		<li><a href="http://chrisprice.io/phonegap-build">phonegap-build</a></li>  
 		<li>
 	  		dolly-zoom 
-	  		<a href="http://chrisprice.github.io/dolly-zoom/css3.htm">css3</a>
-	  		<a href="http://chrisprice.github.io/dolly-zoom/webgl.htm">webgl</a>
+	  		<a href="http://chrisprice.io/dolly-zoom/css3.htm">css3</a>
+	  		<a href="http://chrisprice.io/dolly-zoom/webgl.htm">webgl</a>
   		</li>
 	</ul>
 	
