--- a/index.htm
+++ b/index.htm
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Chris Price</title>
-	<meta name="description" content="Rants from the world of JavaScript"/>
+	<meta name="description" content="JavaScript++"/>
         <meta name="author" content="Chris Price"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 	<ul>
+		<li><a href="https://t.d3fc.io">t.d3fc.io</a></li>
+		<li><a href="https://d3fc.io">D3FC</a></li>
 		<li><a href="http://propertycross.com">Property Cross</a></li>
 		<li><a href="http://chrisprice.io/gum-cube">gum-cube</a></li>  
 		<li><a href="http://chrisprice.io/phonegap-build">phonegap-build</a></li>  
@@ -19,24 +21,29 @@
 	</ul>
 	
 	<ul>
+		<li><a href="https://github.com/chrisprice">GitHub</a></li>
 		<li><a href="https://twitter.com/100pxls">Twitter</a></li>
 		<li><a href="https://plus.google.com/114347034265773524402?rel=author">Google+</a></li>
-		<li><a href="https://github.com/chrisprice">GitHub</a></li>
 		<li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
 	</ul>
 	
 	<div itemscope itemtype="http://data-vocabulary.org/Person">
-  		My name is <span itemprop="name">Chris Price</span>, I'm based in 
-		<span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
-			<span itemprop="locality">Newcastle upon Tyne</span>
-		</span>
-  		and work as an <span itemprop="title">Software Engineer</span>
-		at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
-		I spend my days developing desktop/tablet/mobile web apps
-		for financial services companies. Unfortunately most of those are hidden
-		behind paywalls but I do like to 
-		<a href="http://scottlogic.com/blog/cprice" itemprop="url">blog</a>
-		about it when I can.
+		<p>
+			<img itemprop="image" src="dell-30in-lcd.jpg" alt="A Dell UltraSharp monitor"/>
+		</p>
+  		<p>
+  			My name is <span itemprop="name">Chris Price</span>, I'm based in 
+			<span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
+				<span itemprop="locality">Newcastle upon Tyne</span>
+			</span>
+	  		and work as an <span itemprop="title">Software Engineer</span>
+			at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
+			I spend my days developing desktop/tablet/mobile web apps
+			for financial services companies. Unfortunately most of those are hidden
+			behind paywalls but I do like to 
+			<a href="http://scottlogic.com/blog/cprice" itemprop="url">blog</a>
+			about it when I can.
+		</p>
 	</div>
 </body>
 </html>
