--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+	<h1>Projects</h1>
 	<ul>
 		<li><a href="https://t.d3fc.io">t.d3fc.io</a></li>
 		<li><a href="https://d3fc.io">D3FC</a></li>
@@ -19,15 +20,20 @@
 	  		<a href="http://chrisprice.io/dolly-zoom/webgl.htm">webgl</a>
   		</li>
 	</ul>
-	
+	<h1>Accounts</h1>
 	<ul>
 		<li><a href="https://github.com/chrisprice">GitHub</a></li>
 		<li><a href="https://twitter.com/100pxls">Twitter</a></li>
 		<li><a href="https://plus.google.com/114347034265773524402?rel=author">Google+</a></li>
 		<li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
 	</ul>
-	
+	<h1>Talks</h1>
+	<ul>
+		<li><a href="https://skillsmatter.com/skillscasts/7342-immutable-js-d3-js">London d3.js Feb 2016 - Immutable.js + d3.js = ?</a></li>
+		<li><a href="https://www.youtube.com/watch?v=siHhYHWKIpU">Bristech Conference 2015 - Creating D3 components: a journey of pain and enlightenment</a></li>
+	</ul>
 	<div itemscope itemtype="http://data-vocabulary.org/Person">
+		<h1>About</h1>
 		<p>
 			<img itemprop="image" src="http://1.gravatar.com/avatar/b6fe36176ec7c9475374a5cd3b7bef1a?size=400" alt="MyFace"/>
 		</p>
