--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
 	<div itemscope itemtype="http://data-vocabulary.org/Person">
 		<h1>About</h1>
 		<p>
-			<img itemprop="image" src="http://1.gravatar.com/avatar/b6fe36176ec7c9475374a5cd3b7bef1a?size=400" alt="MyFace"/>
+			<img itemprop="image" src="https://1.gravatar.com/avatar/b6fe36176ec7c9475374a5cd3b7bef1a?size=400" alt="MyFace"/>
 		</p>
   		<p>
   			My name is <span itemprop="name">Chris Price</span>, I'm based in 
