--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
 	  		<a href="http://chrisprice.io/dolly-zoom/css3.htm">css3</a>
 	  		<a href="http://chrisprice.io/dolly-zoom/webgl.htm">webgl</a>
   		</li>
+  		<li><a href="https://chrisprice.io/bezier-demo">bezier-demo</a></li>
 	</ul>
 	<h1>Accounts</h1>
 	<ul>
