--- a/stock.html
+++ b/stock.html
@@ -52,6 +52,24 @@
 <td>
 <a href="https://scottcoin.chrisprice.io/insight/address/144AzpFYkbyurJ6e9DGbQXdvyagtu1cNNM">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/144AzpFYkbyurJ6e9DGbQXdvyagtu1cNNM">API</a>)</td>
 </tr>
+<tr>
+<td>Double Decker</td>
+<td align="right">£0.23</td>
+<td>
+<a href="https://scottcoin.chrisprice.io/insight/address/1L9NX87oTfWYnGmDygJZsT6BtzpTbNkzZQ">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/1L9NX87oTfWYnGmDygJZsT6BtzpTbNkzZQ">API</a>)</td>
+</tr>
+<tr>
+<td>Milky Wawy</td>
+<td align="right">£0.17</td>
+<td>
+<a href="https://scottcoin.chrisprice.io/insight/address/16Pb5dyVh39HZEe3fBD4XoUH8phCCsFvgJ">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/16Pb5dyVh39HZEe3fBD4XoUH8phCCsFvgJ">API</a>)</td>
+</tr>
+<tr>
+<td>Crispy Rolls</td>
+<td align="right">£0.20</td>
+<td>
+<a href="https://scottcoin.chrisprice.io/insight/address/157Frn9aXaYWK3Fv7j5UG6msQUJoRFt11c">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/157Frn9aXaYWK3Fv7j5UG6msQUJoRFt11c">API</a>)</td>
+</tr>
 </tbody>
 </table>
 </body>
