--- a/stock.html
+++ b/stock.html
@@ -29,7 +29,7 @@
 <a href="https://scottcoin.chrisprice.io/insight/address/1PF5voG3aWpj88uo3r1KqXjrUduMtBcwdb">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/1PF5voG3aWpj88uo3r1KqXjrUduMtBcwdb">API</a>)</td>
 </tr>
 <tr>
-<td>Smarties</td>
+<td><strike>Smarties</strike></td>
 <td align="right">£0.30</td>
 <td>
 <a href="https://scottcoin.chrisprice.io/insight/address/1LskKqzjRXmis6JGKmovzDE7rLkKXeg2sU">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/1LskKqzjRXmis6JGKmovzDE7rLkKXeg2sU">API</a>)</td>
@@ -59,7 +59,7 @@
 <a href="https://scottcoin.chrisprice.io/insight/address/1L9NX87oTfWYnGmDygJZsT6BtzpTbNkzZQ">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/1L9NX87oTfWYnGmDygJZsT6BtzpTbNkzZQ">API</a>)</td>
 </tr>
 <tr>
-<td>Milky Wawy</td>
+<td>Milky Way</td>
 <td align="right">£0.17</td>
 <td>
 <a href="https://scottcoin.chrisprice.io/insight/address/16Pb5dyVh39HZEe3fBD4XoUH8phCCsFvgJ">Txs</a> (<a href="https://scottcoin.chrisprice.io/insight-api/addr/16Pb5dyVh39HZEe3fBD4XoUH8phCCsFvgJ">API</a>)</td>
