--- a/stock.html
+++ b/stock.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html>
 <body>
+
+See this spreadsheet instead on Google Drive -
+
+<a href="https://docs.google.com/spreadsheets/d/1DzyNc1O1zwzHiFxvX_fQHZe4zgg71ke0PUAD9Kal900/edit#gid=0">https://docs.google.com/spreadsheets/d/1DzyNc1O1zwzHiFxvX_fQHZe4zgg71ke0PUAD9Kal900/edit#gid=0</a>
+
+
+Or access the data via the API -
+
+<a href="https://sheets.googleapis.com/v4/spreadsheets/1DzyNc1O1zwzHiFxvX_fQHZe4zgg71ke0PUAD9Kal900/values/A1:J100?key=">https://sheets.googleapis.com/v4/spreadsheets/1DzyNc1O1zwzHiFxvX_fQHZe4zgg71ke0PUAD9Kal900/values/A1:J100?key=</a>
+
+Where you want an API key following these instructions -
+
+<a href="https://developers.google.com/sheets/guides/authorizing#APIKey">https://developers.google.com/sheets/guides/authorizing#APIKey</a>
+  
 <table class="unchanged rich-diff-level-one">
 <thead>
 <tr>
