--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
       <img itemprop="image" src="https://1.gravatar.com/avatar/b6fe36176ec7c9475374a5cd3b7bef1a?size=400" alt="MyFace"/>
     </p>
       <p>
-        My name is <span itemprop="name">Chris Price</span>, I'm based in
+        My name is <span itemprop="name">Chris Price</span>. I'm based in
       <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
         <span itemprop="locality">Newcastle upon Tyne</span>
       </span>
-        and work as an <span itemprop="title">Software Engineer</span>
+        and work as a <span itemprop="title">software engineer</span>
       at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
-      I spend my days developing desktop/tablet/mobile web apps
-      for financial services companies. Unfortunately most of those are hidden
-      behind paywalls but I do like to
-      <a href="http://scottlogic.com/blog/cprice" itemprop="url">blog</a>
-      about it when I can.
+        I spend my days developing apps for financial services companies. 
+        Unfortunately these are typically hidden behind paywalls, 
+        but I do like to talk and 
+        <a href="http://scottlogic.com/blog/cprice" itemprop="url">blog</a>
+        about things when I can.
     </p>
   </div>
 </body>
