--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
         about things when I can.
     </p>
   </div>
+  
+  <p><a href="https://prizespinachgnome.page.link/?link=https%3A%2F%2Fwww.example.com%3Fapplink%3Dlogin&ibi=com.atombank.alpha">link</a></p>
 </body>
 </html>
