--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </ul>
   <h1>Talks</h1>
   <ul>
+    <li><a href="https://www.youtube.com/watch?v=U866dA0u4eE">FinJS New York Oct 2018 - Higher or Lower, ML in JS</a></li>
     <li><a href="https://www.youtube.com/watch?v=H72xD8bi6f0">FinJS New York Mar 2017 - Once Upon A Time, There Was An App Store</a></li>
     <li><a href="https://skillsmatter.com/skillscasts/7342-immutable-js-d3-js">London d3.js Feb 2016 - Immutable.js + d3.js = ?</a></li>
     <li><a href="https://www.youtube.com/watch?v=siHhYHWKIpU">Bristech Conference 2015 - Creating D3 components: a journey of pain and enlightenment</a></li>
