--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-  <h1>Online Projects</h1>
+  <h1>Online Demos/Projects</h1>
   <ul>
+    <li><a href="https://chrisprice.io/d3fc-webgl-hathi-explorer/">D3FC Hathi Explorer</a></li>
     <li><a href="https://honesty.store">honesty.store</a></li>
     <li><a href="https://t.d3fc.io">t.d3fc.io</a></li>
     <li><a href="https://d3fc.io">D3FC</a></li>
