--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
         and work as a <span itemprop="title">software engineer</span>
       at <a href="http://scottlogic.com" itemprop="affiliation">Scott Logic</a>.
         I spend my days developing apps for financial services companies. 
-        Unfortunately these are typically hidden behind paywalls, 
-        but I do like to talk and 
-        <a href="http://scottlogic.com/blog/cprice" itemprop="url">blog</a>
-        about things when I can.
+        Unfortunately these are typically not publicly-accessible, 
+        but I do like to talk and blog about things when I can.
     </p>
   </div>
 </body>
