--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
   </ul>
   <h1>Online Demos/Projects</h1>
   <ul>
-    <li><a href="https://chrisprice.io/d3fc-webgl-hathi-explorer/">D3FC Hathi Explorer</a></li>
+    <li><a href="https://chrisprice.dev/d3fc-webgl-hathi-explorer/">D3FC Hathi Explorer</a></li>
     <li><a href="https://honesty.store">honesty.store</a></li>
     <li><a href="https://t.d3fc.io">t.d3fc.io</a></li>
     <li><a href="https://d3fc.io">D3FC</a></li>
     <li><a href="http://propertycross.com">Property Cross</a></li>
-    <li><a href="http://chrisprice.io/gum-cube">gum-cube</a></li>
-    <li><a href="http://chrisprice.io/phonegap-build">phonegap-build</a></li>
+    <li><a href="http://chrisprice.dev/gum-cube">gum-cube</a></li>
+    <li><a href="http://chrisprice.dev/phonegap-build">phonegap-build</a></li>
     <li>
         dolly-zoom
-        <a href="http://chrisprice.io/dolly-zoom/css3.htm">css3</a>
-        <a href="http://chrisprice.io/dolly-zoom/webgl.htm">webgl</a>
+        <a href="http://chrisprice.dev/dolly-zoom/css3.htm">css3</a>
+        <a href="http://chrisprice.dev/dolly-zoom/webgl.htm">webgl</a>
       </li>
-      <li><a href="https://chrisprice.io/bezier-demo">bezier-demo</a></li>
+      <li><a href="https://chrisprice.dev/bezier-demo">bezier-demo</a></li>
   </ul>
   <h1>Talks</h1>
   <ul>
