Add mastodon link

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <li><a href="https://github.com/chrisprice">GitHub</a></li>
       <li><a href="https://twitter.com/100pxls">Twitter</a></li>
       <li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
+      <li></li><a rel="me" href="https://mastodon.social/@100pxls">Mastodon</a></li>
     </ul>
   </div>
 </body>
