--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <h1>Accounts</h1>
     <ul>
       <li><a href="https://github.com/chrisprice">GitHub</a></li>
+      <li><a href="https://www.youtube.com/chrisprice0">YouTube</a></li>
       <li><a href="https://twitter.com/100pxls">Twitter</a></li>
       <li><a href="http://stackoverflow.com/users/333930/chris">StackOverflow</a></li>
       <li><a rel="me" href="https://mastodon.social/@100pxls">Mastodon</a></li>
